fix background color not visible

--- a/components/mainPage/menu/menu.module.css
+++ b/components/mainPage/menu/menu.module.css
@@ -103,3 +103,11 @@
         rgb(var(--color-pastel) / 1)
       );
 }
+
+.navigationBackgroundColor {
+  background-color: color-mix(
+    in srgb,
+    rgb(var(--color-pastel) / 0.4) 25%,
+    rgb(var(--color-light) / 0.4)
+  );
+}
